--- a/firmware/esp8266/README
+++ b/firmware/esp8266/README
@@ -1,1 +1,2 @@
-This is the firmware for an ESP8266 using the backend.  Ultimately this code will be produced from a configuration dynamically. 
+This is the firmware for an ESP8266 using the backend.  
+Ultimately this code will be produced from a configuration dynamically, and hopefully I will have versions for other controllers such as the ESP32 and the RP2350.
